--- a/apps/beach-human/Cargo.toml
+++ b/apps/beach-human/Cargo.toml
@@ -29,6 +29,7 @@ copypasta = "0.8"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 tracing-appender = "0.2"
+crossbeam-channel = "0.5"
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["server"] }
