--- a/apps/beach/Cargo.toml
+++ b/apps/beach/Cargo.toml
@@ -42,6 +42,9 @@ url = "2.5.7"
 uuid = { version = "1", features = ["v4"] }
 webrtc = "0.13.0"
 
+[dev-dependencies]
+test-timeout = { path = "../../crates/test-timeout" }
+
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3"
 nix = { version = "0.27", features = ["ioctl", "signal", "poll"] }
