--- a/apps/beach-web/package.json
+++ b/apps/beach-web/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "debug:webrtc": "tsx scripts/webrtc-debug.ts"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -27,8 +28,11 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.0.0",
     "prettier": "^3.2.5",
+    "tsx": "^4.7.0",
     "typescript": "^5.4.3",
     "vite": "^5.2.8",
-    "vitest": "^1.5.0"
+    "vitest": "^1.5.0",
+    "werift": "^0.22.2",
+    "ws": "^8.17.0"
   }
 }
