--- a/apps/beach-web/package.json
+++ b/apps/beach-web/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^14.1.2",
     "@types/node": "^20.11.30",
@@ -24,12 +25,15 @@
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.0.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.2.5",
+    "tailwindcss": "^4.1.13",
     "tsx": "^4.7.0",
     "typescript": "^5.4.3",
     "vite": "^5.2.8",
