--- a/apps/beach-web/package.json
+++ b/apps/beach-web/package.json
@@ -13,7 +13,14 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
+    "tailwind-merge": "^2.5.4",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-switch": "^1.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
@@ -39,6 +46,7 @@
     "vite": "^5.2.8",
     "vitest": "^1.5.0",
     "werift": "^0.22.2",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
