--- a/apps/beach-road/Cargo.toml
+++ b/apps/beach-road/Cargo.toml
@@ -23,3 +23,6 @@ chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
 tokio-tungstenite = "0.26"
 rand = "0.8"
+
+[dev-dependencies]
+test-timeout = { path = "../../crates/test-timeout" }
