--- a/apps/beach-web/package.json
+++ b/apps/beach-web/package.json
@@ -20,7 +20,9 @@
     "tailwind-merge": "^2.5.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-switch": "^1.1.0"
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.8.0",
