--- a/apps/beach-web/package.json
+++ b/apps/beach-web/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@noble/ciphers": "^1.1.1",
+    "@noble/hashes": "^2.0.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.0",
     "@radix-ui/react-label": "^2.1.0",
