--- a/apps/beach-cabana/Cargo.toml
+++ b/apps/beach-cabana/Cargo.toml
@@ -5,7 +5,14 @@ edition = "2024"
 
 [features]
 default = []
-cabana_sck = []
+cabana_sck = [
+    "dep:screen-capture-kit",
+    "dep:core-media",
+    "dep:core-video",
+    "dep:dispatch2",
+    "dep:objc2",
+    "dep:objc2-foundation",
+]
 webrtc = ["dep:tokio", "dep:bytes", "dep:webrtc"]
 
 [dependencies]
@@ -31,8 +38,6 @@ snow = "0.9"
 bytes = { version = "1", optional = true }
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"], optional = true }
 webrtc = { version = "0.14", optional = true }
-
-[dev-dependencies]
 crossbeam-channel = "0.5"
 
 [target.'cfg(target_os = "macos")'.dependencies]
@@ -40,3 +45,9 @@ core-foundation = "0.10"
 core-graphics = "0.24"
 core-foundation-sys = "0.8"
 foreign-types = "0.5"
+screen-capture-kit = { version = "0.3", optional = true }
+core-media = { version = "0.5", features = ["objc"], optional = true }
+core-video = { version = "0.4", features = ["objc"], optional = true }
+dispatch2 = { version = "0.1", optional = true }
+objc2 = { version = "0.5", features = ["std"], optional = true }
+objc2-foundation = { version = "0.2", features = ["NSArray", "NSDictionary", "NSError", "NSGeometry", "NSString"], optional = true }
