--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,15 @@ sessions/
 # temp data
 tmp/
 temp/
+apps/*/node_modules/
+apps/*/dist/
+apps/*/build/
+apps/*/.turbo/
+apps/*/.tsbuildinfo
+
+# Beach Gate artifacts
+apps/beach-gate/node_modules/
+apps/beach-gate/dist/
 
 # Redis dumps
 *.rdb
