--- a/apps/beach-gate/package.json
+++ b/apps/beach-gate/package.json
@@ -8,7 +8,8 @@
     "dev": "tsx --watch src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc -p tsconfig.json",
-    "lint": "eslint \"src/**/*.{ts,tsx}\""
+    "test": "vitest run",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "fastify": "^4.26.2",
@@ -16,10 +17,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "@vitest/coverage-v8": "^1.5.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "vitest": "^1.5.1"
   }
 }
