--- a/apps/beach/Cargo.toml
+++ b/apps/beach/Cargo.toml
@@ -8,7 +8,7 @@ serde = { version = "1", features = ["derive"] }
 thiserror = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "process"] }
 webrtc = "0.14"
-tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.24", features = ["native-tls", "native-tls-vendored"] }
 futures-util = "0.3"
 url = "2"
 once_cell = "1.19"
