--- a/apps/beach/Cargo.toml
+++ b/apps/beach/Cargo.toml
@@ -42,6 +42,10 @@ beach-rescue-client = { path = "../beach-rescue/client" }
 beach-rescue-core = { path = "../beach-rescue/core" }
 time = { version = "0.3", features = ["serde"] }
 hex = "0.4"
+directories = "5"
+keyring = "2"
+rpassword = "7"
+toml = "0.8"
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["server"] }
