--- a/apps/beach/Cargo.toml
+++ b/apps/beach/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "beach-human"
+name = "beach"
 version = "0.1.0"
 edition = "2024"
+
+[build-dependencies]
+chrono = "0.4"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
