--- a/apps/beach-manager/Cargo.toml
+++ b/apps/beach-manager/Cargo.toml
@@ -15,7 +15,14 @@ config = "0.13"
 dotenvy = "0.15"
 anyhow = "1.0"
 thiserror = "1.0"
+uuid = { version = "1", features = ["serde", "v4"] }
+beach-buggy = { path = "../../crates/beach-buggy" }
+sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json", "migrate"] }
+redis = { version = "0.23", features = ["aio", "tokio-comp"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+jsonwebtoken = "9"
 
 [dev-dependencies]
 tokio = { version = "1.35", features = ["rt", "macros"] }
-reqwest = { version = "0.11", features = ["json"] }
+tower = { version = "0.4", features = ["util"] }
+serde_json = "1.0"
