--- a/crates/beach-buggy/Cargo.toml
+++ b/crates/beach-buggy/Cargo.toml
@@ -11,3 +11,12 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 tracing = "0.1"
+tokio = { version = "1.35", features = ["rt", "macros", "sync", "time"] }
+async-trait = "0.1"
+futures = "0.3"
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+url = "2"
+
+[dev-dependencies]
+axum = { version = "0.7", features = ["macros"] }
+tower = { version = "0.4", features = ["util"] }
