--- a/apps/beach-road/Cargo.toml
+++ b/apps/beach-road/Cargo.toml
@@ -25,7 +25,7 @@ clap = { version = "4.5", features = ["derive"] }
 tokio-tungstenite = "0.26"
 rand = "0.8"
 time = { version = "0.3", features = ["serde"] }
-beach-rescue-core = { path = "../beach-rescue/core" }
+beach-lifeguard-core = { path = "../beach-lifeguard/core" }
 metrics = "0.21"
 metrics-exporter-prometheus = "0.13"
 
