--- a/apps/beach-road/Cargo.toml
+++ b/apps/beach-road/Cargo.toml
@@ -28,6 +28,9 @@ time = { version = "0.3", features = ["serde"] }
 beach-lifeguard-core = { path = "../beach-lifeguard/core" }
 metrics = "0.21"
 metrics-exporter-prometheus = "0.13"
+jsonwebtoken = "9"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+thiserror = "1.0"
 
 [dev-dependencies]
 test-timeout = { path = "../../crates/test-timeout" }
