--- a/apps/beach-manager/Cargo.toml
+++ b/apps/beach-manager/Cargo.toml
@@ -23,6 +23,9 @@ reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 jsonwebtoken = "9"
 base64 = "0.21"
 chrono = { version = "0.4", features = ["serde"] }
+prometheus = "0.13"
+once_cell = "1.19"
+tokio-stream = { version = "0.1", features = ["sync"] }
 
 [dev-dependencies]
 tokio = { version = "1.35", features = ["rt", "macros"] }
