--- a/apps/beach-manager/Cargo.toml
+++ b/apps/beach-manager/Cargo.toml
@@ -26,6 +26,11 @@ chrono = { version = "0.4", features = ["serde"] }
 prometheus = "0.13"
 once_cell = "1.19"
 tokio-stream = { version = "0.1", features = ["sync"] }
+futures-core = "0.3"
+futures-util = "0.3"
+tower-http = { version = "0.5", features = ["cors"] }
+percent-encoding = "2.3"
+webrtc = "0.14"
 
 [dev-dependencies]
 tokio = { version = "1.35", features = ["rt", "macros"] }
