--- a/apps/private-beach/package.json
+++ b/apps/private-beach/package.json
@@ -17,8 +17,11 @@
     "@types/node": "20.11.17",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.13",
     "typescript": "5.3.3"
   }
 }
