--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
       DATABASE_URL: postgres://postgres:postgres@beach-postgres:5432/beach_manager
       REDIS_URL: redis://beach-redis:6379
       AUTH_BYPASS: "1"
+      BEACH_ROAD_URL: http://beach-road:4132
+      PUBLIC_MANAGER_URL: http://localhost:8080
       RUST_LOG: info
     volumes:
       - .:/app
@@ -50,6 +52,27 @@ services:
       - "8080:8080"
     networks:
       - beach-network
+  beach-road:
+    image: rustlang/rust:nightly
+    container_name: beach-road
+    working_dir: /app
+    command: ["cargo", "run", "-p", "beach-road"]
+    environment:
+      REDIS_URL: redis://beach-redis:6379
+      BEACH_SESSION_SERVER: http://beach-road:4132
+      BEACH_ROAD_PORT: 4132
+      RUST_LOG: info
+    volumes:
+      - .:/app
+      - cargo-road-target:/app/target
+      - cargo-road-registry:/usr/local/cargo/registry
+    depends_on:
+      redis:
+        condition: service_started
+    ports:
+      - "4132:4132"
+    networks:
+      - beach-network
   private-beach:
     image: node:20
     container_name: private-beach
@@ -57,6 +80,7 @@ services:
     command: sh -c "npm ci || npm install; npm run dev -- -p 3001"
     environment:
       NEXT_PUBLIC_MANAGER_URL: http://localhost:8080
+      NEXT_PUBLIC_ROAD_URL: http://localhost:4132
       TAILWIND_MODE: watch
       CHOKIDAR_USEPOLLING: "true"
     volumes:
@@ -140,6 +164,8 @@ volumes:
   cargo-manager-registry:
   cargo-lifeguard-target:
   cargo-lifeguard-registry:
+  cargo-road-target:
+  cargo-road-registry:
 
 networks:
   beach-network:
