--- a/apps/beach-cabana/Cargo.toml
+++ b/apps/beach-cabana/Cargo.toml
@@ -39,6 +39,8 @@ bytes = { version = "1", optional = true }
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"], optional = true }
 webrtc = { version = "0.14", optional = true }
 crossbeam-channel = "0.5"
+urlencoding = "2"
+uuid = { version = "1", features = ["v4"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.10"
