--- a/apps/private-beach/package.json
+++ b/apps/private-beach/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-grid-layout": "^1.4.4",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "@types/node": "20.11.17",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "@types/react-grid-layout": "^1.3.5",
+    "@types/react-resizable": "^3.0.4",
     "autoprefixer": "^10.4.16",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
