--- a/apps/beach-cabana/host/Cargo.toml
+++ b/apps/beach-cabana/host/Cargo.toml
@@ -39,6 +39,7 @@ webrtc = { version = "0.14", optional = true }
 crossbeam-channel = "0.5"
 urlencoding = "2"
 uuid = { version = "1", features = ["v4"] }
+once_cell = "1"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.10"
@@ -55,4 +56,3 @@ objc2-foundation = { version = "0.2", features = ["NSArray", "NSDictionary", "NS
 [lib]
 name = "beach_cabana_host"
 path = "src/lib.rs"
-
