--- a/apps/beach-cabana/native-apps/desktop/Cargo.toml
+++ b/apps/beach-cabana/native-apps/desktop/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1"
 beach-cabana-host = { path = "../../host" }
-crossterm = "0.27"
-ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
-
+eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
+egui_extras = { version = "0.27", features = ["image"] }
+image = { version = "0.24", default-features = false, features = ["png"] }
+open = "5"
