--- a/apps/private-beach/package.json
+++ b/apps/private-beach/package.json
@@ -6,10 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate --config drizzle.config.ts",
+    "db:migrate": "drizzle-kit push --config drizzle.config.ts"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "@clerk/nextjs": "^6.33.7",
+    "drizzle-orm": "^0.32.2",
+    "next": "14.2.25",
+    "next-themes": "^0.4.6",
+    "pg": "^8.11.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-grid-layout": "^1.4.4",
@@ -17,13 +23,16 @@
   },
   "devDependencies": {
     "@types/node": "20.11.17",
+    "@types/pg": "^8.15.5",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-resizable": "^3.0.4",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.26.0",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.2.25",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.13",
     "typescript": "5.3.3"
