--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,7 @@ services:
     environment:
       NEXT_PUBLIC_MANAGER_URL: http://localhost:8080
       NEXT_PUBLIC_ROAD_URL: https://api.beach.sh
+      PRIVATE_BEACH_DATABASE_URL: postgres://postgres:postgres@beach-postgres:5432/private_beach_surfer
       TAILWIND_MODE: watch
       CHOKIDAR_USEPOLLING: "true"
     volumes:
@@ -90,8 +91,29 @@ services:
         condition: service_started
       db-seed:
         condition: service_completed_successfully
+      private-beach-migrate:
+        condition: service_completed_successfully
     ports:
       - "3001:3001"
+    networks:
+      - beach-network
+  private-beach-migrate:
+    image: postgres:15-alpine
+    container_name: private-beach-migrate
+    environment:
+      PGPASSWORD: postgres
+    volumes:
+      - ./apps/private-beach/drizzle:/drizzle:ro
+    depends_on:
+      db-migrate:
+        condition: service_completed_successfully
+    entrypoint: ["sh", "-c", "set -e; \
+      until pg_isready -h beach-postgres -U postgres >/dev/null 2>&1; do echo 'waiting for postgres'; sleep 1; done; echo 'postgres is ready for surfer'; \
+      for f in /drizzle/*.sql; do \
+        echo 'applying surfer migration' $$f; \
+        psql -v ON_ERROR_STOP=1 -h beach-postgres -U postgres -d private_beach_surfer -f $$f; \
+      done; \
+      echo 'surfer migrations applied' "]
     networks:
       - beach-network
   db-migrate:
@@ -108,6 +130,10 @@ services:
       until pg_isready -h beach-postgres -U postgres >/dev/null 2>&1; do echo 'waiting for postgres'; sleep 1; done; echo 'postgres is ready'; \
       psql -v ON_ERROR_STOP=1 -h beach-postgres -U postgres -d beach_manager -c 'CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\";'; \
       psql -v ON_ERROR_STOP=1 -h beach-postgres -U postgres -d beach_manager -c 'CREATE EXTENSION IF NOT EXISTS citext;'; \
+      if ! psql -tAc \"SELECT 1 FROM pg_database WHERE datname = 'private_beach_surfer'\" -h beach-postgres -U postgres -d postgres | grep -q 1; then \
+        echo 'creating database private_beach_surfer'; \
+        psql -v ON_ERROR_STOP=1 -h beach-postgres -U postgres -d postgres -c 'CREATE DATABASE private_beach_surfer'; \
+      fi; \
       if psql -tAc \"SELECT to_regclass('session') IS NOT NULL\" -h beach-postgres -U postgres -d beach_manager | grep -q 't'; then \
         echo 'migrations already present; skipping raw apply'; exit 0; \
       fi; \
