--- a/apps/beach-cabana/native-apps/desktop/Cargo.toml
+++ b/apps/beach-cabana/native-apps/desktop/Cargo.toml
@@ -3,12 +3,19 @@ name = "beach-cabana-desktop"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = ["picker-mock"]
+picker-mock = ["dep:cabana-macos-picker", "cabana-macos-picker/mock"]
+picker-native = ["dep:cabana-macos-picker", "cabana-macos-picker/native"]
+
 [dependencies]
 anyhow = "1"
 beach-cabana-host = { path = "../../host", features = ["webrtc"] }
+cabana-macos-picker = { path = "../../crates/cabana-macos-picker", optional = true, default-features = false }
 crossbeam-channel = "0.5"
 eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
 egui_extras = { version = "0.27", features = ["image"] }
+futures-util = "0.3"
 image = { version = "0.24", default-features = false, features = ["png"] }
 open = "5"
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
