--- a/apps/private-beach/package.json
+++ b/apps/private-beach/package.json
@@ -7,14 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "node scripts/copy-wasm.js",
     "db:generate": "drizzle-kit generate --config drizzle.config.ts",
     "db:migrate": "drizzle-kit push --config drizzle.config.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.7",
+    "argon2-browser": "^1.18.0",
     "drizzle-orm": "^0.32.2",
     "next": "14.2.25",
     "next-themes": "^0.4.6",
+    "noise-c.wasm": "^0.4.0",
     "pg": "^8.11.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
