--- a/apps/beach-road/Cargo.toml
+++ b/apps/beach-road/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.22"
 sha2 = "0.10"
+hmac = "0.12"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 anyhow = "1.0"
 tracing = "0.1"
