--- a/apps/beach/Cargo.toml
+++ b/apps/beach/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "beach-client-core"
+name = "beach"
 version = "0.1.0"
 edition = "2024"
+
+[lib]
+name = "beach_client_core"
+path = "src/lib.rs"
 
 [[bin]]
 name = "beach"
