--- a/apps/beach-cabana/native-apps/desktop/Cargo.toml
+++ b/apps/beach-cabana/native-apps/desktop/Cargo.toml
@@ -19,3 +19,4 @@ futures-util = "0.3"
 image = { version = "0.24", default-features = false, features = ["png"] }
 open = "5"
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
+serde_json = "1"
