--- a/apps/beach-cabana/native-apps/desktop/Cargo.toml
+++ b/apps/beach-cabana/native-apps/desktop/Cargo.toml
@@ -24,4 +24,6 @@ open = "5"
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
 serde_json = "1"
 base64 = "0.22"
-beach_client_core = { package = "beach", path = "../../../beach" }
+beach_client_core = { path = "../../../beach", package = "beach" }
+serde = { version = "1", features = ["derive"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
