--- a/crates/beach-buggy/Cargo.toml
+++ b/crates/beach-buggy/Cargo.toml
@@ -16,7 +16,9 @@ async-trait = "0.1"
 futures = "0.3"
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 url = "2"
+webrtc = { version = "0.14", default-features = true }
 
 [dev-dependencies]
 axum = { version = "0.7", features = ["macros"] }
 tower = { version = "0.4", features = ["util"] }
+bytes = "1"
