--- a/apps/beach-manager/Cargo.toml
+++ b/apps/beach-manager/Cargo.toml
@@ -38,3 +38,4 @@ tokio = { version = "1.35", features = ["rt", "macros"] }
 tower = { version = "0.4", features = ["util"] }
 serde_json = "1.0"
 test-timeout = { path = "../../crates/test-timeout" }
+bytes = "1"
