--- a/apps/private-beach/package.json
+++ b/apps/private-beach/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest run",
     "postinstall": "node scripts/copy-wasm.js",
     "db:generate": "drizzle-kit generate --config drizzle.config.ts",
     "db:migrate": "drizzle-kit push --config drizzle.config.ts"
@@ -27,6 +28,9 @@
   "devDependencies": {
     "@types/node": "20.11.17",
     "@types/pg": "^8.15.5",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "@types/react-grid-layout": "^1.3.5",
@@ -36,8 +40,10 @@
     "drizzle-kit": "^0.26.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.2.25",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.13",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vitest": "^1.6.0"
   }
 }
