--- a/crates/beach-buggy/Cargo.toml
+++ b/crates/beach-buggy/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.35", features = ["rt", "macros", "sync", "time"] }
 async-trait = "0.1"
 futures = "0.3"
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+reqwest-eventsource = "0.5"
 url = "2"
 webrtc = { version = "0.14", default-features = true }
 
