--- a/apps/beach-surfer/package.json
+++ b/apps/beach-surfer/package.json
@@ -13,6 +13,9 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:resize": "playwright test pty-resize-hud-duplication",
     "debug:webrtc": "tsx scripts/webrtc-debug.ts"
   },
   "dependencies": {
