--- a/apps/private-beach/package.json
+++ b/apps/private-beach/package.json
@@ -8,6 +8,13 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:tile-resize": "playwright test tests/e2e/tile-resize-hud.spec.ts --workers=1 --timeout=90000",
+    "test:e2e:tile-resize:ui": "playwright test tests/e2e/tile-resize-hud.spec.ts --ui",
+    "test:e2e:tile-resize:debug": "PWDEBUG=1 playwright test tests/e2e/tile-resize-hud.spec.ts",
+    "test:e2e:resize": "playwright test tests/e2e/tile-resize-hud",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
     "postinstall": "node scripts/copy-wasm.js",
     "db:generate": "drizzle-kit generate --config drizzle.config.ts",
     "db:migrate": "drizzle-kit push --config drizzle.config.ts"
@@ -26,11 +33,13 @@
     "react-resizable": "^3.0.5"
   },
   "devDependencies": {
-    "@types/node": "20.11.17",
-    "@types/pg": "^8.15.5",
+    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@playwright/test": "^1.48.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "20.11.17",
+    "@types/pg": "^8.15.5",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "@types/react-grid-layout": "^1.3.5",
@@ -43,6 +52,7 @@
     "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.13",
+    "tsx": "^4.20.6",
     "typescript": "5.3.3",
     "vitest": "^1.6.0"
   }
