--- a/apps/beach-surfer/package.json
+++ b/apps/beach-surfer/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
+    "@rollup/rollup-darwin-arm64": "^4.52.5",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^14.1.2",
     "@types/node": "^20.11.30",
@@ -57,7 +58,7 @@
     "tsx": "^4.7.0",
     "typescript": "^5.4.3",
     "vite": "^5.2.8",
-    "vitest": "^1.5.0",
+    "vitest": "^1.6.1",
     "werift": "^0.22.2",
     "ws": "^8.17.0"
   }
