--- a/apps/private-beach-rewrite-2/package.json
+++ b/apps/private-beach-rewrite-2/package.json
@@ -6,7 +6,8 @@
     "dev": "node scripts/dev-with-fallback.mjs",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.7",
@@ -31,11 +32,16 @@
     "@types/node": "20.11.17",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
     "autoprefixer": "^10.4.16",
     "eslint": "8.56.0",
     "eslint-config-next": "14.2.25",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.13",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vitest": "^1.6.0"
   }
 }
