--- a/apps/private-beach-rewrite-2/package.json
+++ b/apps/private-beach-rewrite-2/package.json
@@ -20,25 +20,26 @@
     "@radix-ui/react-switch": "^1.1.0",
     "argon2-browser": "^1.18.0",
     "class-variance-authority": "^0.7.0",
+    "lucide-react": "^0.474.0",
     "next": "14.2.25",
     "noise-c.wasm": "0.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "reactflow": "^11.11.4",
-    "lucide-react": "^0.474.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
-    "@types/node": "20.11.17",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "20.11.17",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
     "autoprefixer": "^10.4.16",
     "eslint": "8.56.0",
     "eslint-config-next": "14.2.25",
     "jsdom": "^24.0.0",
+    "patch-package": "^8.0.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.13",
     "typescript": "5.3.3",
