--- a/apps/private-beach-rewrite-2/package.json
+++ b/apps/private-beach-rewrite-2/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "argon2-browser": "^1.18.0",
