--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,60 +112,6 @@ services:
       - "4133:4133"
     networks:
       - beach-network
-  private-beach:
-    image: node:20
-    container_name: private-beach
-    working_dir: /app/apps/private-beach
-    command: sh -c "npm ci || npm install; npm run dev -- -p 3001"
-    environment:
-      NEXT_PUBLIC_MANAGER_URL: http://localhost:8080
-      NEXT_PUBLIC_ROAD_URL: http://localhost:4132
-      NEXT_PUBLIC_PRIVATE_BEACH_VISIBLE_DRIVER: "true"
-      PRIVATE_BEACH_DATABASE_URL: postgres://postgres:postgres@beach-postgres:5432/private_beach_surfer
-      TAILWIND_MODE: watch
-      CHOKIDAR_USEPOLLING: "true"
-    volumes:
-      - .:/app
-    depends_on:
-      beach-manager:
-        condition: service_started
-      db-seed:
-        condition: service_completed_successfully
-      private-beach-migrate:
-        condition: service_completed_successfully
-    ports:
-      - "3001:3001"
-    networks:
-      - beach-network
-  private-beach-rewrite:
-    image: node:20
-    container_name: private-beach-rewrite
-    working_dir: /app/apps/private-beach-rewrite
-    command: sh -c "npm ci || npm install; npm run dev -- -p 3002"
-    environment:
-      NEXT_PUBLIC_PRIVATE_BEACH_REWRITE_ENABLED: "1"
-      NEXT_PUBLIC_PRIVATE_BEACH_MANAGER_URL: http://localhost:8080
-      PRIVATE_BEACH_MANAGER_URL: http://beach-manager:8080
-      PRIVATE_BEACH_MANAGER_TOKEN: ${PRIVATE_BEACH_MANAGER_TOKEN:-}
-      NEXT_PUBLIC_CLERK_MANAGER_TOKEN_TEMPLATE: ${NEXT_PUBLIC_CLERK_MANAGER_TOKEN_TEMPLATE:-}
-      NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY:-}
-      CLERK_SECRET_KEY: ${CLERK_SECRET_KEY:-}
-      BEACH_TEST_MODE: ${BEACH_TEST_MODE:-true}
-      TAILWIND_MODE: watch
-      CHOKIDAR_USEPOLLING: "true"
-    volumes:
-      - .:/app
-    depends_on:
-      beach-manager:
-        condition: service_started
-      db-seed:
-        condition: service_completed_successfully
-      private-beach-migrate:
-        condition: service_completed_successfully
-    ports:
-      - "3002:3002"
-    networks:
-      - beach-network
   private-beach-rewrite-2:
     image: node:20
     container_name: private-beach-rewrite-2
@@ -174,6 +120,8 @@ services:
     environment:
       NEXT_PUBLIC_PRIVATE_BEACH_REWRITE_ENABLED: "1"
       NEXT_PUBLIC_PRIVATE_BEACH_MANAGER_URL: http://localhost:8080
+      NEXT_PUBLIC_PRIVATE_BEACH_ROAD_URL: http://localhost:4132
+      PRIVATE_BEACH_ROAD_URL: http://localhost:4132
       PRIVATE_BEACH_MANAGER_URL: http://beach-manager:8080
       PRIVATE_BEACH_MANAGER_TOKEN: ${PRIVATE_BEACH_MANAGER_TOKEN:-}
       NEXT_PUBLIC_CLERK_MANAGER_TOKEN_TEMPLATE: ${NEXT_PUBLIC_CLERK_MANAGER_TOKEN_TEMPLATE:-}
