--- a/apps/beach-manager/Cargo.toml
+++ b/apps/beach-manager/Cargo.toml
@@ -37,7 +37,7 @@ webrtc = "0.14"
 url = "2"
 
 [dev-dependencies]
-tokio = { version = "1.35", features = ["rt", "macros"] }
+tokio = { version = "1.35", features = ["rt", "macros", "test-util"] }
 tower = { version = "0.4", features = ["util"] }
 serde_json = "1.0"
 test-timeout = { path = "../../crates/test-timeout" }
