--- a/apps/beach-manager/Cargo.toml
+++ b/apps/beach-manager/Cargo.toml
@@ -34,7 +34,10 @@ futures-util = "0.3"
 tower-http = { version = "0.5", features = ["cors"] }
 percent-encoding = "2.3"
 webrtc = "0.14"
+webrtc-ice = "0.14"
 url = "2"
+rand = "0.8"
+hex = "0.4"
 
 [dev-dependencies]
 tokio = { version = "1.35", features = ["rt", "macros", "test-util"] }
