--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     networks:
       - beach-network
   beach-manager:
+    platform: linux/amd64
     image: rustlang/rust:nightly@sha256:5766e2ac4aec7297945133b9cebb031acea6964b204b175868279a9a87ab5a95
     container_name: beach-manager
     working_dir: /app
@@ -39,10 +40,20 @@ services:
       BEACH_ROAD_URL: http://beach-road:4132
       PUBLIC_MANAGER_URL: http://127.0.0.1:8080
       BEACH_GATE_URL: ${BEACH_GATE_URL:-http://beach-gate:4133}
+      BEACH_GATE_JWKS_URL: https://shining-sunbird-15.clerk.accounts.dev/.well-known/jwks.json
+      BEACH_GATE_AUDIENCE: private-beach-manager
       BEACH_SESSION_SERVER: http://beach-road:4132
       STDOUT_LOG: ${BEACH_MANAGER_STDOUT_LOG:-info}
       BEACH_MANAGER_FILE_LOG: ${BEACH_MANAGER_FILE_LOG:-trace}
       LOG_PATH: /var/log/beach-manager/beach-manager.log
+      # Expose host-reachable ICE candidates for WebRTC fast-path.
+      # Set BEACH_ICE_PUBLIC_IP to your host's LAN IP (e.g., 192.168.68.51) so
+      # the container advertises an address the hosts can reach. Alternatively,
+      # set BEACH_ICE_PUBLIC_HOST to a resolvable hostname (defaults to host.docker.internal).
+      BEACH_ICE_PUBLIC_IP: ${BEACH_ICE_PUBLIC_IP:-}
+      BEACH_ICE_PUBLIC_HOST: ${BEACH_ICE_PUBLIC_HOST:-host.docker.internal}
+      BEACH_ICE_PORT_START: ${BEACH_ICE_PORT_START:-62000}
+      BEACH_ICE_PORT_END: ${BEACH_ICE_PORT_END:-62100}
     volumes:
       - .:/app
       - cargo-target:/app/target
@@ -55,9 +66,13 @@ services:
         condition: service_started
     ports:
       - "8080:8080"
+      # Publish a small UDP port range for ICE. Keep this in sync with
+      # BEACH_ICE_PORT_START/END above.
+      - "62000-62100:62000-62100/udp"
     networks:
       - beach-network
   beach-road:
+    platform: linux/amd64
     image: rustlang/rust:nightly@sha256:5766e2ac4aec7297945133b9cebb031acea6964b204b175868279a9a87ab5a95
     container_name: beach-road
     working_dir: /app
@@ -120,6 +135,7 @@ services:
     environment:
       NEXT_PUBLIC_PRIVATE_BEACH_REWRITE_ENABLED: "1"
       NEXT_PUBLIC_PRIVATE_BEACH_MANAGER_URL: http://localhost:8080
+      NEXT_PUBLIC_PRIVATE_BEACH_MANAGER_TOKEN: ${NEXT_PUBLIC_PRIVATE_BEACH_MANAGER_TOKEN:-}
       NEXT_PUBLIC_PRIVATE_BEACH_ROAD_URL: http://localhost:4132
       PRIVATE_BEACH_ROAD_URL: http://localhost:4132
       PRIVATE_BEACH_MANAGER_URL: http://beach-manager:8080
