--- a/apps/beach-manager/Cargo.toml
+++ b/apps/beach-manager/Cargo.toml
@@ -39,6 +39,7 @@ webrtc-ice = "0.14"
 url = "2"
 rand = "0.8"
 hex = "0.4"
+bytes = "1"
 
 [dev-dependencies]
 tokio = { version = "1.35", features = ["rt", "macros", "test-util"] }
