--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,11 @@
-# Host-specific overrides for Beach Manager's WebRTC fast-path.
-# Update BEACH_ICE_PUBLIC_IP to the LAN IP or hostname other hosts can reach.
-# Defaulting to 127.0.0.1 keeps local CLI hosts working without extra exports.
-BEACH_ICE_PUBLIC_IP=127.0.0.1
-BEACH_ICE_PORT_START=62000
-BEACH_ICE_PORT_END=62100
+# Optional overrides for Beach Manager's WebRTC fast-path.
+# Leave BEACH_ICE_PUBLIC_IP/HOST unset so the manager relies on STUN by default.
+# Uncomment these only when you need to force a specific NAT mapping.
+# BEACH_ICE_PUBLIC_IP=
+# BEACH_ICE_PUBLIC_HOST=
+
+# Local TURN configuration for docker-compose (coturn + beach-gate).
+BEACH_GATE_TURN_SECRET=beach-dev-turn-secret
+BEACH_GATE_TURN_URLS=turn:127.0.0.1:3478
+BEACH_GATE_TURN_REALM=turn.private-beach.test
+BEACH_GATE_TURN_REQUIRED_ENTITLEMENTS=private-beach:turn
