--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       CLERK_JWKS_URL: ${CLERK_JWKS_URL:-}
       CLERK_ISSUER: ${CLERK_ISSUER:-}
       CLERK_AUDIENCE: ${CLERK_AUDIENCE:-}
-      BEACH_SESSION_SERVER: http://beach-road:4132
+      BEACH_SESSION_SERVER: http://localhost:4132
       STDOUT_LOG: ${BEACH_MANAGER_STDOUT_LOG:-info}
       BEACH_MANAGER_FILE_LOG: ${BEACH_MANAGER_FILE_LOG:-info,beach_manager=trace}
       LOG_PATH: /var/log/beach-manager/beach-manager.log
@@ -96,7 +96,7 @@ services:
     environment:
       REDIS_URL: redis://beach-redis:6379
       BEACH_SESSION_SERVER: http://beach-road:4132
-      BEACH_PUBLIC_SESSION_SERVER: http://127.0.0.1:4132
+      BEACH_PUBLIC_SESSION_SERVER: http://host.docker.internal:4132
       BEACH_ROAD_PORT: 4132
       RUST_LOG: info,beach_road::heartbeat=debug,beach_road::webrtc=debug
     volumes:
