--- a/apps/beach-manager/Cargo.toml
+++ b/apps/beach-manager/Cargo.toml
@@ -47,6 +47,7 @@ tower = { version = "0.4", features = ["util"] }
 serde_json = "1.0"
 test-timeout = { path = "../../crates/test-timeout" }
 bytes = "1"
+http-body-util = "0.1"
 
 [build-dependencies]
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
