--- a/apps/private-beach-rewrite-2/package.json
+++ b/apps/private-beach-rewrite-2/package.json
@@ -31,6 +31,7 @@
     "toml": "^3.0.0"
   },
   "devDependencies": {
+    "@rollup/rollup-darwin-arm64": "^4.53.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
