--- a/.envrc
+++ b/.envrc
@@ -7,49 +7,58 @@
 
 set -euo pipefail
 
-is_bad_ip() {
+is_global_ip() {
 	local ip="$1"
-	[[ -z "$ip" ]] && return 0
+	[[ -z "$ip" ]] && return 1
 	case "$ip" in
-		127.*|0.0.0.0) return 0 ;;
-		192.168.65.*) return 0 ;;
-		172.17.*|172.18.*|172.19.*) return 0 ;;
-		172.1[0-6].*) return 0 ;;
+		127.*|0.0.0.0|169.254.*|::1) return 1 ;;
+		192.168.65.*) return 1 ;;
 	esac
-	return 1
+	return 0
+}
+
+ipconfig_ips() {
+	local iface ip
+	if command -v ipconfig >/dev/null 2>&1; then
+		for iface in en0 en1 en2; do
+			ip=$(ipconfig getifaddr "$iface" 2>/dev/null || true)
+			[[ -n "$ip" ]] && printf '%s\n' "$ip"
+		done
+	fi
+}
+
+collect_ips() {
+	local ip
+	if command -v ifconfig >/dev/null 2>&1; then
+		ifconfig | awk '/inet / {print $2}' | while read -r ip; do
+			[[ -n "$ip" && "$ip" != "127.0.0.1" ]] && echo "$ip"
+		done
+	fi
+	if command -v ip >/dev/null 2>&1; then
+		ip addr | awk '/inet / {print $2}' | cut -d'/' -f1
+	fi
+	if command -v ip >/dev/null 2>&1; then
+		ip route get 1.1.1.1 2>/dev/null | awk '/src/ {print $7; exit}'
+	fi
 }
 
 detect_host_ip() {
 	local candidate=""
-	local value=""
+	local ip
+	for ip in $(ipconfig_ips); do
+		ip="${ip%%/.*}"
+		[[ -n "$ip" ]] && echo "$ip" && return
+	done
 
-	# macOS: prefer Wi-Fi/Ethernet interfaces.
-	if command -v ipconfig >/dev/null 2>&1; then
-		for iface in en0 en1 en2; do
-			value=$(ipconfig getifaddr "$iface" 2>/dev/null || true)
-			if [[ -n "$value" ]] && ! is_bad_ip "$value"; then
-				candidate="$value"
-				break
-			fi
-		done
-	fi
-
-	# Linux: derive the source IP that would reach the public Internet.
-	if [[ -z "$candidate" ]] && command -v ip >/dev/null 2>&1; then
-		value=$(ip route get 1.1.1.1 2>/dev/null | awk '/src/ {print $7; exit}')
-		if [[ -n "$value" ]] && ! is_bad_ip "$value"; then
-			candidate="$value"
+	while IFS= read -r ip; do
+		ip="${ip%%/.*}"
+		if [[ -n "$ip" ]] && is_global_ip "$ip"; then
+			echo "$ip"
+			return
+		elif [[ -z "$candidate" ]]; then
+			candidate="$ip"
 		fi
-	fi
-
-	# hostname -I fallback (Linux) or future methods.
-	if [[ -z "$candidate" ]] && command -v hostname >/dev/null 2>&1; then
-		value=$(hostname -I 2>/dev/null | awk '{print $1}')
-		if [[ -n "$value" ]] && ! is_bad_ip "$value"; then
-			candidate="$value"
-		fi
-	fi
-
+	done < <(collect_ips | uniq)
 	echo "$candidate"
 }
 
