--- a/apps/beach/Cargo.toml
+++ b/apps/beach/Cargo.toml
@@ -63,6 +63,8 @@ keyring = "2"
 rpassword = "7"
 toml = "0.8"
 prometheus = "0.13"
+crc32c = "0.6"
+jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["server"] }
